[0.6.0] Simple MQTT Client Update - see CHANGELOG.md

--- a/config/config.ini
+++ b/config/config.ini
@@ -5,3 +5,10 @@ LogToConsole = True
 [example.py]
 LogToFile = True
 LogToConsole = True
+
+[hermes.py]
+LogToFile = True
+LogToConsole = True
+BrokerHostname = mqtt.eclipseprojects.io
+BrokerPort = 1883
+KeepAlive = 60
